<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    android:overScrollMode="ifContentScrolls">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_heavy"
        android:paddingTop="@dimen/padding_heavy"
        android:paddingBottom="@dimen/padding_large">

        <TextView
            android:id="@+id/search_mod_source_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aerix_discover_source_label" />

        <Spinner
            android:id="@+id/search_mod_source_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/aerix_discover_sources"
            android:spinnerMode="dropdown" />

        <Button
            android:id="@+id/search_mod_connect_curseforge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/aerix_discover_connect_curseforge" />

        <TextView
            android:id="@+id/search_mod_project_type_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            android:text="@string/aerix_discover_title" />

        <Spinner
            android:id="@+id/search_mod_project_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/aerix_discover_project_types"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/search_mod_mc_version_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            android:text="@string/profiles_profile_version" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/search_mod_selected_mc_version_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/padding_medium"
                android:layout_weight="1"
                android:background="@drawable/background_line"
                android:hint="@string/version_select_hint"
                android:paddingHorizontal="@dimen/padding_heavy"
                android:paddingVertical="@dimen/padding_medium"
                android:textSize="@dimen/_13ssp" />

            <Button
                android:id="@+id/search_mod_mc_version_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/padding_large"
                android:text="@string/global_select" />
        </LinearLayout>

        <com.kdt.mcgui.MineButton
            android:id="@+id/search_mod_apply_filters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_large"
            android:text="@string/generic_apply" />
    </LinearLayout>
</ScrollView>
