<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_menu_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:padding="4dp">

    <TextView
        android:id="@+id/home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aerix_welcome_title"
        android:textColor="#F1F6FC"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/aerix_welcome_subtitle"
        android:textColor="#AABCD0"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@id/home_title"
        app:layout_constraintTop_toBottomOf="@id/home_title" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/home_center_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/instance_panel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/aerix_panel_background"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/home_center_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_subtitle">

        <TextView
            android:id="@+id/current_instance_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.08"
            android:text="@string/aerix_current_instance"
            android:textColor="#91B5D0"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.kdt.mcgui.mcVersionSpinner
            android:id="@+id/mc_version_spinner"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginTop="9dp"
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/spinner_arrow"
            app:drawableEndSize="@dimen/padding_heavy"
            app:drawableStartIntegerScaling="true"
            app:drawableStartSize="@dimen/_36sdp"
            app:drawableEndPadding="@dimen/_1sdp"
            app:layout_constraintEnd_toStartOf="@id/edit_profile_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_instance_label" />

        <ImageButton
            android:id="@+id/edit_profile_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/aerix_nav_button"
            android:contentDescription="@string/aerix_edit_instance"
            android:padding="12dp"
            android:src="@drawable/ic_px_edit"
            android:tint="#E4F0FB"
            app:layout_constraintBottom_toBottomOf="@id/mc_version_spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/mc_version_spinner" />

        <TextView
            android:id="@+id/instance_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/aerix_instance_hint"
            android:textColor="#AABCD0"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mc_version_spinner" />

        <com.kdt.mcgui.MineButton
            android:id="@+id/play_button"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="14dp"
            android:text="@string/main_play"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instance_hint"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/quick_actions_panel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/aerix_panel_background"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/home_center_guideline"
        app:layout_constraintTop_toBottomOf="@id/home_subtitle">

        <TextView
            android:id="@+id/quick_actions_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.08"
            android:text="@string/aerix_quick_actions"
            android:textColor="#91B5D0"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.kdt.mcgui.LauncherMenuButton
            android:id="@+id/news_button"
            style="@style/LauncherMenuButton.Universal"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_px_book"
            android:gravity="center_vertical"
            android:text="@string/mcl_tab_wiki"
            app:layout_constraintEnd_toStartOf="@id/quick_actions_divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quick_actions_title" />

        <View
            android:id="@+id/quick_actions_divider"
            android:layout_width="8dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/news_button"
            app:layout_constraintEnd_toStartOf="@id/social_media_button"
            app:layout_constraintStart_toEndOf="@id/news_button"
            app:layout_constraintTop_toTopOf="@id/news_button" />

        <com.kdt.mcgui.LauncherMenuButton
            android:id="@+id/social_media_button"
            style="@style/LauncherMenuButton.Universal"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:drawableStart="@drawable/ic_social_media"
            android:gravity="center_vertical"
            android:text="@string/mcl_button_social_media"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/quick_actions_divider"
            app:layout_constraintTop_toTopOf="@id/news_button" />

        <com.kdt.mcgui.LauncherMenuButton
            android:id="@+id/custom_control_button"
            style="@style/LauncherMenuButton.Universal"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_px_gamepad"
            android:gravity="center_vertical"
            android:text="@string/mcl_option_customcontrol"
            app:layout_constraintEnd_toStartOf="@id/quick_actions_divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/news_button" />

        <com.kdt.mcgui.LauncherMenuButton
            android:id="@+id/install_jar_button"
            style="@style/LauncherMenuButton.Universal"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:drawableStart="@drawable/ic_px_java_run"
            android:gravity="center_vertical"
            android:text="@string/main_install_jar_file"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/quick_actions_divider"
            app:layout_constraintTop_toTopOf="@id/custom_control_button" />

        <com.kdt.mcgui.LauncherMenuButton
            android:id="@+id/share_logs_button"
            style="@style/LauncherMenuButton.Universal"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_px_sharelog"
            android:gravity="center_vertical"
            android:text="@string/main_share_logs"
            app:layout_constraintEnd_toStartOf="@id/quick_actions_divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/custom_control_button" />

        <com.kdt.mcgui.LauncherMenuButton
            android:id="@+id/open_files_button"
            style="@style/LauncherMenuButton.Universal"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:drawableStart="@drawable/ic_px_folder"
            android:gravity="center_vertical"
            android:text="@string/mcl_button_open_directory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/quick_actions_divider"
            app:layout_constraintTop_toTopOf="@id/share_logs_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
